removed user unity prefs

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@
 
 #Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+
+UnityProject-csharp.sln
+UnityProject.userprefs
+UnityProject.sln
+Assembly-CSharp-vs.csproj
+Assembly-CSharp.csproj
