removed project files

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@
 
 #Unity3D Generated File On Crash Reports
 sysinfo.txt
+UnityProject/Assembly-CSharp-vs.csproj
+UnityProject/Assembly-CSharp.csproj
+UnityProject/UnityProject-csharp.sln
+UnityProject/UnityProject.sln
